--- a/Everbright-Yango/layOut/layOut.css
+++ b/Everbright-Yango/layOut/layOut.css
@@ -22,3 +22,11 @@
         margin-bottom: 50px;
     }
 }
+.boxx{
+    position:fixed !important;
+    width:30px;
+    height:30px;
+    background: #f00;
+    left:0;
+    top:0;
+}
