--- a/Everbright-Yango/layOut/layOut.html
+++ b/Everbright-Yango/layOut/layOut.html
@@ -38,8 +38,8 @@
                 <div class="ab upthree">
 
                 </div>
-                <li><a href="../aboutUs/aboutUs.html" >关于我们</a></li>
                 <li><a href="../index.html">公司新闻</a></li>
+                <li><a href="../aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="../busiNess/busiNess.html">主营业务</a></li>
                 <li><a href="javascript:void(0)" class="color_white">业务布局</a></li>
                 <li><a href="../recruiTment/recruiTment.html">企业招聘</a></li>
@@ -96,7 +96,6 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <img src="../img/p4/centerPic1.jpg" alt="First slide">
-
                 </div>
                 <div class="item">
                     <img src="../img/p4/centerPic2.png" alt="Second slide">
@@ -116,17 +115,21 @@
     </div>
     <div class="row">
         <div class="col-sm-6 ">
-            <img src="../img/p4/layout1.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">业务主要客户</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p4/layout1.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">业务主要客户</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="../img/p4/layout2.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">公司主营业务内容</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p4/layout2.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">公司主营业务内容</h4>
         </div>
     </div>
     <div class="newsMore re">
         <img src="../img/p4/p4Btn.png" alt=""/>
-        <a href="#">
+        <a href="javascript:void(0)">
             <div class="ab pic_top_box">
             </div>
         </a>
@@ -140,9 +143,10 @@
             <div class="re center_box center_box2 banner-container">
                 <div class="col-sm-9 padding_0">
                     <div class="footleft">
-                        <a href="../aboutUs/aboutUs.html">关于我们&nbsp;|</a>
-                        <a href="../index.html">&nbsp;最新新闻&nbsp;|</a>
+                        <a href="../index.html">最新新闻&nbsp;|</a>
+                        <a href="../aboutUs/aboutUs.html">&nbsp;关于我们&nbsp;|</a>
                         <a href="../busiNess/busiNess.html">&nbsp;业务主营&nbsp;|</a>
+                        <a href="#">&nbsp;业务布局&nbsp;|</a>
                         <a href="../recruiTment/recruiTment.html">&nbsp;诚聘人才&nbsp;|</a>
                         <a href="../contactUs/contactUs.html">&nbsp;联系我们</a>
                     </div>
